Navigation Alignment Fix

--- a/FireballPizza/styles.css
+++ b/FireballPizza/styles.css
@@ -210,7 +210,7 @@ a {
 }
 
 .nav-divider {
-    height: 90%;
+    height: 60%;
 }
 
 .menu-container {
